overflow fix

--- a/stylesArtiste.css
+++ b/stylesArtiste.css
@@ -21,7 +21,6 @@ ul,a{
 }
 ul li{
     display: inline-flex;
-    
 }
 a:hover{
     text-decoration: none;
@@ -36,9 +35,8 @@ a:focus{
     
 }
 #secondSection{
-    position: absolute;
     background: #1b2530;
-    background: linear-gradient(rgba(27, 37, 48, 0), #131518 48px);
+    background: linear-gradient(rgba(27, 37, 48, 0), #0c0f11 48px);
     color: white;
     left: 0;
     right: 0;
